# stegano

./: .gitignore  CMakeLists.txt  README.md
include/: .gitignore  cli.h  decode.h  encode.h
lib/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  cli.c  decode.c  encode.c  main.c
